--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,16 +3,14 @@
 
 .container {
     display: flex;
-    flex-flow: row wrap;
+    flex-flow: column;
     align-items: stretch;
     justify-content: center;
     width: 90%;
-    max-width: 768px;
     margin: auto;
 }
 
 .box {
-    min-width: 260px;
     min-height: 250px;
     flex-grow: 1;
     margin: 5px;
@@ -62,5 +60,16 @@ a.box {
         opacity: 1;
         box-shadow: 0 10px 6px -6px #aaa;
         transform: translateY(-3px);
+    }
+}
+
+@media (min-width: 768px) {
+    .container {
+        width: 80%;
+        max-width: 1000px;
+        flex-flow: row wrap;
+    }
+    .box {
+        min-width: 49%;
     }
 }
